--- a/package.json
+++ b/package.json
@@ -45,24 +45,17 @@
   ],
   "preferences": [
     {
-      "name": "sessionToken",
-      "description": "Enter your ChatGPT session token value",
+      "name": "email",
+      "description": "Enter your ChatGPT login e-mail",
       "type": "textfield",
-      "title": "Session Token",
+      "title": "E-mail",
       "required": true
     },
     {
-      "name": "clearanceToken",
-      "description": "Enter your ChatGPT clearance value",
-      "type": "textfield",
-      "title": "Clearance Token",
-      "required": true
-    },
-    {
-      "name": "userAgent",
-      "description": "Enter your ChatGPT user agent value",
-      "type": "textfield",
-      "title": "User Agent",
+      "name": "password",
+      "description": "Enter your ChatGPT login password",
+      "type": "password",
+      "title": "Password",
       "required": true
     },
     {
@@ -71,15 +64,16 @@
       "description": "Enable auto TTS everytime you get a generated answer",
       "type": "checkbox",
       "title": "Text-to-Speech",
-      "required": false
+      "required": true
     }
   ],
   "dependencies": {
     "@raycast/api": "^1.44.0",
     "@types/uuid": "^9.0.0",
-    "say": "^0.16.0",
-    "chatgpt": "^2.1.1",
+    "chatgpt": "^2.3.0",
     "node-fetch": "^3.3.0",
+    "puppeteer": "^19.4.0",
+    "say": "^0.16.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
@@ -89,6 +83,7 @@
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
+    "kind-of": "^6.0.3",
     "prettier": "^2.5.1",
     "typescript": "^4.4.3"
   },
